<?xml version="1.0"?>
<package format="2">
  <name>donkey_actuator</name>
  <version>0.0.0</version>
  <description>The donkey_actuator package</description>
  <maintainer email="catundertheleaf@gmail.com">Stacy</maintainer>
 

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>adafruit_pca9685</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>adafruit_pca9685</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>adafruit_pca9685</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
