<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_car</name>
  <version>0.0.0</version>
  <description>A package to control a car.</description>
  <maintainer email="catundertheleaf@gmail.com">Stacy</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>gazebo_ros</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- <gazebo_ros gazebo_plugin_path="lib"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/> -->
  </export>
</package>
